Working placeholder for opencl search engine

--- a/src/search_engines/CMakeLists.txt
+++ b/src/search_engines/CMakeLists.txt
@@ -20,6 +20,12 @@ set (ACSMX2_SOURCES
     acsmx2_api.cc
 )
 
+set (ACSMX3_SOURCES
+    ac_gpu.cc
+    acsmx3.cc
+    acsmx3.h
+)
+
 set (BNFA_SOURCES
     ac_bnfa.cc
     bnfa_search.cc
@@ -44,6 +50,7 @@ if ( STATIC_SEARCH_ENGINES )
     add_library(search_engines OBJECT
         ${ACSMX_SOURCES}
         ${ACSMX2_SOURCES}
+        ${ACSMX3_SOURCES}
         ${HYPER_SOURCES}
         ${INTEL_SOURCES}
         ${SEARCH_ENGINE_SOURCES}
@@ -58,6 +65,7 @@ else ( STATIC_SEARCH_ENGINES)
 
     add_dynamic_module(acsmx search_engines ${ACSMX_SOURCES})
     add_dynamic_module(acsmx2 search_engines ${ACSMX2_SOURCES})
+    add_dynamic_module(acsmx3 search_engines ${ACSMX3_SOURCES})
 if ( HAVE_HYPERSCAN )
     add_dynamic_module(hyperscan search_engines ${HYPER_SOURCES})
 endif ()
